# livefactchecker

./: README.md  fullscripts.txt  main.py  pyproject.toml  requirements.txt
app/: gemini_client.py  models.py  rag.py  retriever.py  routes.py  tavily_client.py  verifier.py
scripts/: check_gemini.py
