[project]
name = "livefactchecker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "numpy>=2.2.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.1",
    "transformers>=4.48.0",
    "tavily-python>=0.7.25",
    "uvicorn>=0.48.0",
    "wikipedia>=1.4.0",
    "google>=3.0.0",
    "google-genai>=2.7.0",
]
